<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RockScissorsPaperActivity">

        <TextView
            android:id="@+id/tv_humanChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="152dp"
            android:layout_marginTop="33dp"
            android:text="@string/human_choice" />

        <ImageView
            android:id="@+id/iv_humanChoice"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/player_human"
            android:src="@drawable/rockrot" />

        <TextView
            android:id="@+id/tv_computerChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="194dp"
            android:text="@string/computer_choice" />

        <ImageView
            android:id="@+id/iv_computerChoice"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="337dp"
            android:contentDescription="@string/player_computer"
            android:src="@drawable/paperrot" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="248dp"
            android:text="@string/scores" />

        <Button
            android:id="@+id/btn_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="126dp"
            android:text="@string/rock" />

        <Button
            android:id="@+id/btn_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="120dp"
            android:layout_marginBottom="126dp"
            android:text="@string/scissors" />

        <Button
            android:id="@+id/btn_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="126dp"
            android:text="@string/paper" />

    </RelativeLayout>

</layout>
